# contextprofiler

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
contextprofiler/: __init__.py  _profiler.py
src/contextprofiler/: _colors.py
tests/: conftest.py  test_colors.py  test_integration.py  test_profiler.py
