[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextprofiler"
version = "0.1.0"
description = "A simple line-by-line profiler for Python code blocks using context managers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Simon Kern" },
]
keywords = [
    "profiler",
    "profiling",
    "performance",
    "debugging",
    "line-profiler",
    "context-manager",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/skjerns/contextprofiler"
Repository = "https://github.com/skjerns/contextprofiler"
Issues = "https://github.com/skjerns/contextprofiler/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
